-feat maximize and other calculation features

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,7 @@
 $fontFamily: "Segoe UI";
 * {
   box-sizing: border-box;
+  user-select: none;
 }
 body {
   background: #01a8f7 url("../images/wallpaper.jpg") center center / cover
@@ -41,6 +42,17 @@ body {
     transform: none;
     font-size: 1.4rem;
   }
+  .maximize-icon {
+    width: 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px;
+    cursor: pointer;
+    &:hover {
+      background: rgba(208, 208, 208, 0.9);
+    }
+  }
 }
 
 .display {
@@ -55,6 +67,7 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  user-select: all;
 }
 .result {
   font-size: 3em;
@@ -62,6 +75,7 @@ body {
   height: 60%;
   text-overflow: ellipsis;
   overflow: hidden;
+  user-select: all;
 }
 .buttons {
   display: grid;
