--- a/scss/app.scss
+++ b/scss/app.scss
@@ -26,7 +26,7 @@ body {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  transition: all 0.2s ease;
+  transition: all 0.3s ease;
   h1 {
     margin: 0;
     font-size: 0.8em;
@@ -97,6 +97,7 @@ button {
   &:hover {
     background: rgba(208, 208, 208, 0.9);
   }
+
   &.dark {
     font-weight: 400;
     background: rgba(227, 227, 227, 0.6);
@@ -106,6 +107,9 @@ button {
   }
   &.dark {
     font-size: 1em;
+    &.big {
+      font-size: 1.4em;
+    }
   }
   &.bg-white {
     background: rgba(241, 241, 241, 0.9);
